--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.10 Module Review and Practice Problem.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.10 Module Review and Practice Problem.md
@@ -1,76 +1,89 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第二章: Lean Operations  
-##### 视频小节6: Module Review and Practice Problem  
+
+
+通过**丰田生产系统（TPS）**的历史演变与核心框架（精益屋），结合汽车行业案例与工具（OEE、%-VAT），揭示精益运营的本质是**消除浪费、提升价值流效率**，核心是掌握如何通过系统性方法优化流程并驱动持续改进。
 
 ---
 
-### 核心概念与历史背景  
-1. **丰田生产系统（TPS）的核心原则**  
-   • **目标**：零浪费（Muda），涵盖零缺陷、零故障、零库存、零切换时间。  
-   • **三大支柱**：  
-     ◦ **流动（Flow）**：通过JIT（准时制）、混合生产（Heijunka）和单件流实现需求与供应同步；  
-     ◦ **质量（Quality）**：快速缺陷检测（如“安灯系统”停止生产线）；  
-     ◦ **基础**：标准化流程、员工参与（Kaizen持续改进）、柔性生产。  
-   • **TPS屋（Toyota Production System House）**：  
-     ◦ **屋顶**：零浪费；  
-     ◦ **支柱**：流动与质量；  
-     ◦ **地基**：标准化、员工赋能、柔性。  
+### **一、汽车工业的历史启示**
+1. **福特的规模化生产模式**  
+   - **核心**：流水线分工、标准化作业（单任务工人）、追求规模经济。  
+   - **成就**：Model T生产时间从12小时缩短至2.5小时，成本大幅降低，推动汽车普及。  
+   - **局限**：僵化的流程、高库存、忽视灵活性。  
 
-2. **汽车工业的演变**  
-   • **卡尔·本茨（1886年）**：手工打造首辆汽车，关注产品而非流程；  
-   • **亨利·福特（1910年代）**：流水线革命，标准化与规模经济（Model T年产量超百万）；  
-   • **丰田（二战后）**：资源匮乏下创新，TPS以柔性应对小批量需求（1950年仅产300辆车）。  
-
-3. **TPS对全球制造业的影响**  
-   • **MIT研究（1986年）**：丰田工厂效率远超通用（GM装配一辆车耗时40小时，丰田仅18小时）；  
-   • **库存周转率**：丰田库存周转为2小时（GM为2周），实现“日清日结”。  
+2. **丰田的精益革命**  
+   - **背景**：二战后日本资源匮乏，需求分散，无法复制福特模式。  
+   - **创新**：  
+     - **需求驱动**：按需生产（Just-in-Time），减少库存。  
+     - **员工赋能**：工人可拉停生产线（Andon Cord）即时解决问题。  
+     - **持续改进**：Kaizen（改善）文化，全员参与消除浪费。  
+   - **成果**：1980年代MIT研究显示，丰田生产效率（工时/车）仅为通用的45%，缺陷率低70%，库存周转快10倍。
 
 ---
 
-### 工具与案例分析  
-4. **OEE（设备综合效率）计算实践**  
-   • **案例**：自行车风洞测试资源评估  
-     ◦ **公式**：  
-       \[
-       \text{OEE} = \frac{\text{增值时间}}{\text{总可用时间}} \quad \text{（案例结果：31.25%）}
-       \]  
-     ◦ **步骤**：  
-       1. 总可用时间：10天×24小时×60分钟=14,400分钟；  
-       2. 实际工作时间：9天×（24小时-2小时20分钟）=9×21小时40分钟=1,980分钟；  
-       3. 增值时间：5次/天×100分钟/次×9天=4,500分钟；  
-       4. OEE=4,500 / 14,400≈31.25%。  
+### **二、丰田生产系统（TPS）的精益屋框架**
+1. **屋顶目标：零浪费（Muda）**  
+   - **七大浪费**：过量生产、等待、运输、过度加工、库存、动作、缺陷。  
+   - **延伸目标**：零缺陷、零故障、零库存、零切换时间。  
 
-5. **流程时间效率（%-VAT）计算实践**  
-   • **案例**：护照更新流程  
-     ◦ **总流程时间**：23天（各环节等待时间累加）；  
-     ◦ **增值时间**：12分钟（信息核验与打印）；  
-     ◦ **效率**：  
-       \[
-       \text{流程时间效率} = \frac{12\ \text{分钟}}{23\ \text{天} \times 24\ \text{小时} \times 60\ \text{分钟}} \approx 0.0036\%
-       \]  
-   • **启示**：官僚流程中99.99%时间为非增值（等待、审批）。  
+2. **两大支柱**  
+   - **流动（Flow）**：  
+     - **节拍时间（Takt Time）**：匹配生产节奏与需求速率。  
+     - **单件流（Single-Piece Flow）**：减少批量，加速周转。  
+     - **看板（Kanban）**：可视化拉动系统，避免过量生产。  
+   - **质量（Quality）**：  
+     - **自働化（Jidoka）**：自动检测缺陷并停机。  
+     - **源头质量**：问题即时解决，避免传递。  
+
+3. **地基：可持续运营基础**  
+   - **标准化作业**：定义最优操作流程，减少变异。  
+   - **员工参与**：鼓励一线提出改进建议（如质量圈）。  
+   - **柔性能力**：多技能工人、快速换模（SMED），适应需求变化。  
 
 ---
 
-### 关键结论与行业启示  
-1. **TPS的竞争优势**  
-   • **消除浪费**：通过流动设计减少库存与等待；  
-   • **员工赋能**：一线员工参与改进（如安灯系统、Kaizen）；  
-   • **柔性生产**：适应小批量、多样化需求（如混合模式生产）。  
+### **三、关键工具与实践**
+1. **整体设备效率（OEE）**  
+   - **公式**：OEE = 可用率 × 性能率 × 良品率  
+   - **案例**：某设备10天内运行9天，每天有效操作5次（每次100分钟），无效时间2小时 → OEE=31.25%。  
+   - **意义**：量化设备利用损失（停机、速度低下、废品）。  
 
-2. **精益思维的核心原则**  
-   • **需求驱动**：以Takt Time（节拍时间）同步生产与市场需求；  
-   • **单件流理想**：追求零库存，但需供应链协同与柔性技术支撑；  
-   • **客户视角**：优化流程时间效率（%-VAT），减少客户摩擦。  
+2. **增值时间比率（%-VAT）**  
+   - **公式**：%-VAT = 增值时间 / 总流程时间 × 100%  
+   - **案例**：护照更新流程总耗时23天，仅12分钟为有效操作 → %-VAT≈0.09%。  
+   - **启示**：暴露非增值环节（如等待、审批），推动流程精简。  
 
-3. **现代制造业的转型方向**  
-   • **数字化工具**：物联网实时监控设备OEE，AI优化排产；  
-   • **文化变革**：从“规模经济”转向“速度经济”，平衡效率与灵活性。  
+---
 
-**最终目标**：通过**丰田生产系统**的框架与工具，构建**零浪费、高响应、强韧性**的运营体系，实现从“制造产品”到“创造价值”的跨越。
+### **四、行业应用与关键结论**
+1. **制造业**：  
+   - **降低库存**：通过JIT减少仓储成本，如丰田2小时零件库存 vs 通用2周。  
+   - **快速换型**：SMED技术缩短生产线切换时间，支持小批量定制。  
 
-## Prompt
+2. **服务业**：  
+   - **医疗流程**：通过%-VAT识别患者等待时间，优化检查与诊疗衔接。  
+   - **餐饮连锁**：应用节拍时间匹配高峰需求，动态调配人力（如Subway案例）。  
 
+3. **核心结论**：  
+   - **精益非成本削减**：而是通过消除浪费释放资源，提升客户价值。  
+   - **员工是核心资产**：赋能一线参与改进，激发持续创新（如丰田年人均建议数≈10条）。  
+   - **柔性对抗不确定性**：多技能培训、模块化设计应对市场波动。  
+
+---
+
+### **五、行动建议**
+- **绘制价值流图（VSM）**：识别端到端流程中的非增值步骤（如文档审批、物料搬运）。  
+- **启动改善周（Kaizen Event）**：聚焦瓶颈环节，跨部门协作快速实验解决方案。  
+- **数字化监控**：部署IoT传感器实时追踪OEE，自动触发维护预警。  
+- **建立拉动系统**：在供应链中推广看板，减少过量生产与库存积压。  
+
+--- 
+
+### **总结**  
+精益运营的本质是**以客户价值为导向，通过全员参与的持续改进，构建灵活、高效、无浪费的流程体系**。丰田生产系统不仅重塑了汽车行业，更为制造业与服务业的转型提供了普适框架。核心在于：**将“消除浪费”内化为组织文化，用数据驱动决策，让每一秒、每一动作为客户创造价值**。
+
+### 附录：字幕
+
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -99,3 +112,4 @@ Let's start today's video with some historical context about the Toyota producti
 All right, here we go. So we start by writing down the definition of the OEE. The OEE is simply the value at time, and we're going to divide this by the total time over the total time we pay the resource. I suggest we're going to use a ten day window here for reasons that will become clear in just a moment. So ten days and ten days are 24 hours in a day and 60 minutes in an hour. So here in the denominator, we have the total number of minutes over those ten days. Now we have to look at when does work not happen, right? What do we have to take out? From these ten days there were only nine days that we were actually working, right? So nine days when work gets done. And then from these 110 or 20 minutes, from these 2 hours, 20 minutes are not adding value. So the procedures are each 100 minutes long in terms of their value add time. And how many procedures are we doing per day? Well, we only have five value add procedures a day because the other two are not adding value, they are a form of rework. And then type this into your calculator and you get an OEE of 0.3125. All right, the next problem is about the percent value add time looking now from the perspective of the flow unit. As usual, put me on hold first.
 
 Here we go again. Let's tackle this problem together. So again, this problem is about the percentage value add time. Remember that ratio is the ratio of the value add time. And we're going to divide that value add time by the flow time, right? How long the unit spends in the process. Let's start with the flow time. That is the time that it takes the country to renew the passport, that is two days, four days. And then down here, another three days, another two days, ten days for the printing, and finally another two days. You add all of this up and it's going to take 23 days. And how much value at work it's done over those 23 days. Well, we can debate a little bit about the ten minutes that is happening at the clerk, but it's such a small number, it will not matter. Let's give them credit for these ten minutes. And then there are two minutes for the printing, though that's a grand total of 12 minutes of value add time. And you divide it by the flow time and you get zero point zero zero something. No matter what it is, it is a very small number. All right, that was a long video and a long module. I hope I did not digress too much into the details of the automotive industry. In the spirit of lean, let me be quick here in my closing comments. Thank you for joining me in this module. I see you soon.
+```
