--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.4 Module Review and Practice Problem.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.4 Module Review and Practice Problem.md
@@ -1,74 +1,79 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第一章: Optimizing Flow Management  
-##### 视频小节4: Module Review and Practice Problem  
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
+
+### 课程2.4 模块回顾和实践问题
+
+以**Mr. K美发沙龙**案例为核心，通过练习题形式回顾了流程管理的关键概念，包括**瓶颈识别**、**劳动力利用率**、**直接劳动力成本**等，并探讨了流程改进策略与**节拍时间（Takt Time）** 的应用。
+
+#### 1. 关键概念回顾
+
+##### 1.1 流程效率核心指标
+
+- **周期时间（Cycle Time）**：  
+  - 定义：生产单位产品所需时间，由瓶颈环节决定。  
+  - 案例：Mr. K沙龙中，第三位员工（S3）处理活动4（25分钟）和活动5（5分钟），总处理时间30分钟/客户，成为**瓶颈**，因此周期时间为30分钟/客户。  
+- **劳动力利用率（Labor Utilization）**：  
+  - 公式1：`（总劳动时间） / （员工数 × 周期时间）`  
+  - 案例：总劳动时间=10（S1）+20（S2）+30（S3）=60分钟；劳动力利用率=60/(3×30)=66.7%。  
+- **直接劳动力成本（Cost of Direct Labor）**：  
+  - 计算：`总工资成本 / 产出量`；案例中3名员工时薪\$20，每小时产出2客户，单客户成本= \$60/2= \$30。  
+
+##### 1.2 生产时间与节拍时间
+
+- **批量订单时间计算**：  
+  - 首个产品耗时=各环节处理时间之和（10+20+30=60分钟），后续每30分钟产出一个，10客户总耗时=60 + 9×30= **330分钟**。  
+- **节拍时间（Takt Time）**：  
+  - 公式：`可用时间 / 需求数量`；案例中沙龙每日营业10小时（600分钟），目标服务40客户，节拍时间=600/40= **15分钟/客户**。  
+- **目标人力（Target Manpower）**：  
+  - 公式：`总劳动时间 / 节拍时间`；案例中总劳动时间60分钟，目标人力=60/15= **4人**（需向上取整）。  
+
+#### 2. 流程优化策略
+
+##### 2.1 瓶颈资源卸载（Bottleneck Offloading）  
+
+- **核心逻辑**：将瓶颈环节任务转移至低负荷资源。  
+  - 案例改进：S3（原处理活动4和5）将结账（5分钟）转移给S1（原处理活动1），S3处理时间降至25分钟，周期时间缩短至25分钟/客户，提升整体产能。  
+- **优化效果**：  
+  - 直接劳动力成本降低（单位时间产出增加），劳动力利用率提高（闲置时间减少）。  
+
+##### 2.2 生产线平衡（Line Balancing）
+
+- **平衡率（Balance Rate）**：衡量各环节处理时间与节拍时间的匹配度，理想值为100%。  
+  - 案例改进后：若S1处理活动1+5（10+5=15分钟），S2处理活动2+3（10+10=20分钟），S3处理活动4（25分钟），需进一步调整任务分配以实现平衡。  
+
+#### 3. 流程管理与项目管理的对比
+
+- **重复性流程 vs. 单次项目**：  
+  - **流程管理**：适用于高频重复操作（如Mr. K沙龙、特斯拉生产线），关注周期时间、瓶颈优化。  
+  - **项目管理**：适用于一次性任务（如阿波罗登月），关注关键路径和里程碑。  
+- **Elon Musk的启示**：  
+  - 火星殖民需视为「流程」而非「项目」，通过标准化和规模化实现可持续操作（如SpaceX星舰的批量生产）。  
 
 ---
 
-### 核心概念回顾与工具总结  
-1. **关键指标与公式**  
-   • **劳动力内容（Labor Content）**：流程中所有人工处理时间的总和（如美发沙龙案例：10+20+30=60分钟/客户）。  
-   • **周期时间（Cycle Time）**：流程中完成一个单位所需的时间，由瓶颈决定（案例中为30分钟/客户）。  
-   • **空闲时间（Idle Time）**：非瓶颈资源的未利用时间（如第一员工空闲20分钟/客户）。  
-   • **劳动力利用率（Labor Utilization）**：  
-     \[
-     \text{劳动力利用率} = \frac{\text{劳动力内容}}{\text{劳动力内容 + 总空闲时间}} \quad \text{或} \quad \frac{\text{劳动力内容}}{\text{资源数 × 周期时间}}
-     \]  
-     ◦ **案例**：60/(60+30)=66.7% 或 60/(3×30)=66.7%。  
-   • **直接劳动力成本（Direct Labor Cost）**：  
-     \[
-     \text{成本} = \frac{\text{总工资}}{\text{流程速率}} \quad \text{（案例：3人×\$20/小时 ÷ 2客户/小时 = \$30/客户）}
-     \]  
+#### 4. 关键结论与行动指南
 
-2. **生产时间估算**  
-   • **公式**：总时间 = 第一个单位完成时间 + (数量-1) × 周期时间  
-   • **案例（服务10客户）**：  
-     ◦ 第一个客户耗时60分钟（10+20+30）；后续9个客户耗时9×30=270分钟 → 总时间=60+270=**330分钟**。  
-
-3. **节拍时间（Takt Time）与目标人力**  
-   • **节拍时间**：为满足需求所需的生产节奏，公式：  
-     \[
-     \text{Takt Time} = \frac{\text{可用时间}}{\text{需求率}} \quad \text{（案例：每日600分钟 ÷ 40客户=15分钟/客户）}
-     \]  
-   • **目标人力**：最低人力需求 = 劳动力内容 / Takt Time（案例：60分钟/客户 ÷15分钟/客户=4人）。  
+1. **瓶颈优先原则**：优化瓶颈环节（如S3）对整体效率提升最显著，可通过任务重分配或技术升级实现。  
+2. **动态平衡策略**：结合节拍时间调整生产线，避免理论计算与实际任务分配的落差（如Mr. K案例需4人但实际可能需5人）。  
+3. **劳动力分工的权衡**：专业化提升效率，但需避免过度分工导致的协调成本（如员工技能单一化影响灵活性）。  
+4. **数据驱动决策**：使用OEE（设备综合效率）和%-VAT（增值时间占比）量化流程效率，指导资源调配。  
 
 ---
 
-### 案例分析（美发沙龙优化）  
-4. **瓶颈识别与优化策略**  
-   • **原始瓶颈**：第三员工（处理时间30分钟/客户）。  
-   • **优化方案**：将第三员工的5分钟结账任务转移至第一员工（空闲资源），减少瓶颈处理时间至25分钟/客户，提升整体产能。  
+#### 练习题答案速览（Mr. K沙龙案例）
 
-5. **流程改进效果**  
-   • **新周期时间**：25分钟/客户 → 流程速率提升至2.4客户/小时（原为2客户/小时）。  
-   • **直接劳动力成本降低**：若需求不变，成本从\$30/客户降至\$25/客户。  
-
----
-
-### 项目管理 vs. 流程管理  
-6. **核心区别**  
-   • **项目管理**：聚焦一次性任务（如阿波罗登月、首次心脏手术），关注关键路径与里程碑。  
-   • **流程管理**：适用于重复性操作（如特斯拉生产、急诊室运营），强调标准化、效率与瓶颈优化。  
-   • **埃隆·马斯克的启示**：  
-     ◦ **“火星殖民是D-Day式行动，而非阿波罗任务”**：需大规模重复生产飞船（流程管理），而非单次发射（项目管理）。  
+1. **MK1（瓶颈）**：S3（30分钟/客户）  
+2. **MK2（劳动力利用率）**：66.7%  
+3. **MK3（直接劳动力成本）**：\$30/客户  
+4. **MK4（10客户总耗时）**：330分钟  
+5. **MK5（改进策略）**：S3转移结账任务至S1  
+6. **MK6（节拍时间）**：15分钟/客户  
+7. **MK7（目标人力）**：4人  
 
 ---
 
-### 关键结论  
-1. **流程分析的核心价值**：  
-   • **量化驱动决策**：通过周期时间、劳动力利用率等指标，科学评估效率并制定改进策略。  
-   • **瓶颈优先原则**：优化瓶颈环节（如任务转移、自动化）对整体效率提升最显著。  
+### 附录：字幕
 
-2. **精益工具的实际应用**：  
-   • **节拍时间**：将市场需求转化为明确的产能目标，指导资源规划（如人力、设备）。  
-   • **劳动力利用率**：平衡资源分配，减少空闲浪费，但需避免过度分工导致的灵活性下降。  
-
-3. **从项目到流程的思维转变**：  
-   • **规模化生产的必然选择**：当业务从单次交付转向重复性输出时，流程管理工具（如OEE、%-VAT）成为持续改进的核心。  
-
-**最终目标**：通过**数据驱动的流程优化**与**战略性资源分配**，构建**高效率（高利用率）、低成本（减少浪费）、高响应（需求匹配）**的运营体系，适应从单次项目到大规模生产的多样化业务需求。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -92,4 +97,33 @@ Learning Objectives:
 
 字幕文本: 
 
-In the last video, I promised you will be flying to mass today. I will keep my word, but first, I want to annoy you with some rather earthly calculations. I want to first repeat the definition says we have covered until now in this module. In the set of videos, we talked about the labor content, the cycle time, the idle time, the labor utilization, and the cost of direct labor. We also talked about the idea of line balancing. Now that we've arrived at the end of this module, I want you to be comfortable computing the cycle time, finding the labor content and the labor utilization, and computing the cost of direct labor. You should also be able to determine how long it takes to produce x units, starting with an empty system. And finally, you should now be able to find tack time and the target manpower as well to think about some process improvement strategies. Down here you see the key formulas that you will need to remember from this module. The problem I've chosen for this module as Mr. K's here Simone, Mr. K is a problem that's somewhat similar to the subway case in the sense that there are multiple activities that are done by a set of workers. Let me emphasize that there are five activities. Five activity is not five workers. There are three workers and five activities. The five activities are spread out as you can see in the question. As usual, I want you to put me on hold as you attacking the problem by yourself first. Pause now. Here we go again. We start by looking at the bottleneck. For that, we draw simple process flow diagram. We have a box for the first worker or a triangle or a block for the second worker and other triangle and a box for the third worker. That's our process flow diagram. Then for the bottleneck, we need to find the capacity level and that requires computing the processing times first. The processing time are 10 minutes per guest at the first, 20 at the second and 30 minutes for guests at the third resource. To get to the capacity level, what we do is we're going to take m divided by the processing time. Since it's a one worker per station is simply one divided by the processing time, which is 1/10 as the capacity for the first resource, 1/20, 1/30. This is now expressing guests per minute. That makes it clear that the third resource is going to be the bottleneck and that answers our question. Next, let's look at average labor utilization. I mentioned in the module two ways of finding the average labor utilization. Let me illustrate how both of them would work. The labor utilization, we said is labor content, which is the sum of the processing time divided by three times the cycle time. What does this mean? The labor content is 10 + 20 + 30, the sum of the processing time. That's 60 minutes per unit. We are going to be on a 30-minute cycle. Three times 30 is 90 minutes, which gets us a 66% labor utilization. Now the other way that I mentioned in the video, we could compute the same thing by looking at the labor content, then divide it by the labor content plus the idle time. Now again, we're on a 30 minute cycle here. That means that my first resource has a 20 minutes of an idle time. Processing time is 10 minutes and cycle time is 30, so 20 minutes of idle time. The second one is 10 minutes of idle time, and the third one zero. That means we have a toll lighter time of 30 minutes. 60/60 + 30 is going to be my labor utilization. Same result. Then finally, at a wage rate of $20 per hour, what is the cost of direct labor per customer? For that, we have to look at three people each week, 20 bucks per hour. It's $60 per hour. We're going to divide it by the flow rate. They're serving two guests per hour, that's our flow rate. The per hour is going to cancel out. We're going to get a cost of direct labor that is $30 per guest. Here's the next batch of question. How long would it take the processes serve 10 customers starting out empty? Minus think about that. How long would it take to serve one customer? Well, that's going to be 10 minutes at the first resource, the first employee, 20 minutes at the second employee, 30 minutes at the third employee. So after 60 minutes, we're going to have our first customer out. From then onwards we need to serve nine more and those nine agronomic come out at the rate of the cycle time, which is 30, 60 + 9 x 30. That gives us 330 minutes. How could this process be improved by offloading the bottling? While that question kind of gives away the answer. We have to move work away from the bottleneck. We saw the bottleneck was Session number 3. When you look at the activities here, Session number 3 is doing the hair, but also spending five minutes here on the checkout. If you could move these five minutes to somebody who has less work to do and the key suspect, I guess, yeah, it's going to be Station number 1. You'd offload the bottleneck. In short, what you would be doing is you would move five minutes of work from station number 3, the third employee who is currently the bottleneck, and this is going to be super busy. You're going to take these five minutes to station number 1 who really has nothing to do. That doesn't always work because there might be precedence relationship. That's a good move you should consider. What's the takt time that we need to achieve if we want to have 40 customers per day served? Remember, when we look at takt time, we look at the available time, so 10 hours or 600 minutes per day, and we're going to divide it by the demand rate, which we said is the target demand and we said that it is 40 customers per day. The per day cancels out and we have 600 by 40, that is 15 minutes between customers. That's going to be our takt, we are going to be serving a customer every 15 minutes. The takt time in turn allows us to compute the target manpower. For the target manpower, remember, we have to look at the labor content, and the labor content divided by the takt is simply going to give us the target manpower. Again, labor content, already computed, that was 60 minutes per customer, and we're going to divide it by the 15 minutes per customer that we just computed as the takt. That means that the very minimum, if everything can go super smoothly and there is no idle time, we're going to need a total of four employees. My philosophical observation of today relates to the difference between project management and process management. Many of you likely have experience with managing a project. You define activities, set an end goal, and you look with something known as the critical path. Recently, I heard an interesting quote from Elon Musk. Think of Elon Musk whatever you like, but Tesla and SpaceX are arguably remarkable businesses. Elon was talking a bit about his favorite topic which is flying to Mars. He said, "Flying to Mars is more of a D-Day operation than it is an Apollo mission." Let me repeat this. "Flying to Mars is more of a D-Day operation than it is an Apollo mission." What did he mean? The Apollo was an amazing project with a single mission and a historical success. On July 20, 1969, NASA landed the Apollo 11 and its astronauts on the moon. Personally, I don't remember it, I was exactly 100 days old when that happened. Land a man on the moon. Though ultimately multiple people walked on the surface of the moon, the entire management focus of the Apollo mission was on landing one man on the moon. The mission of D-Day and the invasion of Normandy by the Western Allied forces was different. It was not about learning one boat in Normandy. On June 6th, in 1944, the Americans, British, and the French began sending over 150,000 soldiers to Normandy coastline, including the famous Utah Beach, Omaha Beach, Juno Beach, and Sword Beach. I like this picture here of American airplane production before the invasion. The focus of management was not to build a boat or build a plane, it was building many of them. Process management ultimately only makes sense if you're repeating something. Elon Musk doesn't want to build one rocket to fly to Mars, he intends, and in fact, has even started to build, many Starships. His dream is to establish a colony on Mars. For management problems, you only do something once. You should take a course on project management. If however, you want to do something multiple times, you have to think about process flows. For most of us, I propose, planning a wedding is a project; you plan for one marriage. The wedding planner, in contrast, thinks of wedding as a process. Other examples. The more units flow through the process, the easier will it be to use process analysis as a tool. When in the late 1800s Gottlieb Daimler built the first car, he at first didn't think about bottlenecks, utilization, so inventory. His focus was on managing one project, which was building a beautiful car. When three decades later Henry Ford mass-produced cars, he would make a vehicle roughly every minute. For Ford, it was all about the process. Similarly in health care, big emergency room see between 100-200 patients per day. Even something medically challenging as a bypass surgery is not thought of as a process. In contrast, when Dr. Daniel Williams preferred to perform the first heart surgery, he most likely thought of it as a project. You see that when work gets repeated, when we move from the first units to the nth unit, we need to change our focus on project management to process management, and that is really what this course is all about.
+In the last video, I promised you will be flying to mass today. I will keep my word, but first, I want to annoy you with some rather earthly calculations. I want to first repeat the definition says we have covered until now in this module. In the set of videos, we talked about the labor content, the cycle time, the idle time, the labor utilization, and the cost of direct labor. We also talked about the idea of line balancing. Now that we've arrived at the end of this module, I want you to be comfortable computing the cycle time, finding the labor content and the labor utilization, and computing the cost of direct labor. You should also be able to determine how long it takes to produce x units, starting with an empty system. And finally, you should now be able to find tack time and the target manpower as well to think about some process improvement strategies. Down here you see the key formulas that you will need to remember from this module. The problem I've chosen for this module as Mr. K's here Simone, Mr. K is a problem that's somewhat similar to the subway case in the sense that there are multiple activities that are done by a set of workers. Let me emphasize that there are five activities. Five activity is not five workers. There are three workers and five activities. The five activities are spread out as you can see in the question. As usual, I want you to put me on hold as you attacking the problem by yourself first. 
+
+[SLIDE]
+Mr. K’s is a very popular hair salon. It offers high-quality hair-styling and physical relaxation
+services at a reasonable price, so it always has unlimited demand. The service process includes
+five activities that are conducted in the sequence described below. (The time required for each
+activity is shown in parenthesis):
+Activity 1: Welcome a guest and offer homemade herb tea. (10 minutes)
+Activity 2: Wash and condition hair. (10 minutes)
+Activity 3: Neck, shoulder, and back stress release massage. (10 minutes)
+Activity 4: Design the hair style and do the hair. (25 minutes)
+Activity 5: Check out the guest. (5 minutes)
+Three servers (S1, S2, and S3) offer the services in a worker-paced line. The assignment of tasks to
+servers is the following: S1 does Activity 1. S2 does Activities 2 and Activity 3. S3 does Activities 4
+and Activity 5.
+[SLIDE]
+
+[SLIDE]
+MK1: What is the bottleneck in the process?
+MK2: What is the average labor utilization?
+MK3: What is the cost of direct labor?
+MK4: Starting with an empty process, how long would it take to serve 10 customers?
+MK5: How could this process be improved by offloading the bottleneck?
+MK6: Assume the salon is open for 10 hours per day. Mr. K has the goal of serving 40 customers per
+day. What takt time does he have to achieve?
+MK7: What would be his target manpower?
+[SLIDE]
+
+Pause now. Here we go again. We start by looking at the bottleneck. For that, we draw simple process flow diagram. We have a box for the first worker or a triangle or a block for the second worker and other triangle and a box for the third worker. That's our process flow diagram. Then for the bottleneck, we need to find the capacity level and that requires computing the processing times first. The processing time are 10 minutes per guest at the first, 20 at the second and 30 minutes for guests at the third resource. To get to the capacity level, what we do is we're going to take m divided by the processing time. Since it's a one worker per station is simply one divided by the processing time, which is 1/10 as the capacity for the first resource, 1/20, 1/30. This is now expressing guests per minute. That makes it clear that the third resource is going to be the bottleneck and that answers our question. Next, let's look at average labor utilization. I mentioned in the module two ways of finding the average labor utilization. Let me illustrate how both of them would work. The labor utilization, we said is labor content, which is the sum of the processing time divided by three times the cycle time. What does this mean? The labor content is 10 + 20 + 30, the sum of the processing time. That's 60 minutes per unit. We are going to be on a 30-minute cycle. Three times 30 is 90 minutes, which gets us a 66% labor utilization. Now the other way that I mentioned in the video, we could compute the same thing by looking at the labor content, then divide it by the labor content plus the idle time. Now again, we're on a 30 minute cycle here. That means that my first resource has a 20 minutes of an idle time. Processing time is 10 minutes and cycle time is 30, so 20 minutes of idle time. The second one is 10 minutes of idle time, and the third one zero. That means we have a toll lighter time of 30 minutes. 60/60 + 30 is going to be my labor utilization. Same result. Then finally, at a wage rate of $20 per hour, what is the cost of direct labor per customer? For that, we have to look at three people each week, 20 bucks per hour. It's $60 per hour. We're going to divide it by the flow rate. They're serving two guests per hour, that's our flow rate. The per hour is going to cancel out. We're going to get a cost of direct labor that is $30 per guest. Here's the next batch of question. How long would it take the processes serve 10 customers starting out empty? Minus think about that. How long would it take to serve one customer? Well, that's going to be 10 minutes at the first resource, the first employee, 20 minutes at the second employee, 30 minutes at the third employee. So after 60 minutes, we're going to have our first customer out. From then onwards we need to serve nine more and those nine agronomic come out at the rate of the cycle time, which is 30, 60 + 9 x 30. That gives us 330 minutes. How could this process be improved by offloading the bottling? While that question kind of gives away the answer. We have to move work away from the bottleneck. We saw the bottleneck was Session number 3. When you look at the activities here, Session number 3 is doing the hair, but also spending five minutes here on the checkout. If you could move these five minutes to somebody who has less work to do and the key suspect, I guess, yeah, it's going to be Station number 1. You'd offload the bottleneck. In short, what you would be doing is you would move five minutes of work from station number 3, the third employee who is currently the bottleneck, and this is going to be super busy. You're going to take these five minutes to station number 1 who really has nothing to do. That doesn't always work because there might be precedence relationship. That's a good move you should consider. What's the takt time that we need to achieve if we want to have 40 customers per day served? Remember, when we look at takt time, we look at the available time, so 10 hours or 600 minutes per day, and we're going to divide it by the demand rate, which we said is the target demand and we said that it is 40 customers per day. The per day cancels out and we have 600 by 40, that is 15 minutes between customers. That's going to be our takt, we are going to be serving a customer every 15 minutes. The takt time in turn allows us to compute the target manpower. For the target manpower, remember, we have to look at the labor content, and the labor content divided by the takt is simply going to give us the target manpower. Again, labor content, already computed, that was 60 minutes per customer, and we're going to divide it by the 15 minutes per customer that we just computed as the takt. That means that the very minimum, if everything can go super smoothly and there is no idle time, we're going to need a total of four employees. My philosophical observation of today relates to the difference between project management and process management. Many of you likely have experience with managing a project. You define activities, set an end goal, and you look with something known as the critical path. Recently, I heard an interesting quote from Elon Musk. Think of Elon Musk whatever you like, but Tesla and SpaceX are arguably remarkable businesses. Elon was talking a bit about his favorite topic which is flying to Mars. He said, "Flying to Mars is more of a D-Day operation than it is an Apollo mission." Let me repeat this. "Flying to Mars is more of a D-Day operation than it is an Apollo mission." What did he mean? The Apollo was an amazing project with a single mission and a historical success. On July 20, 1969, NASA landed the Apollo 11 and its astronauts on the moon. Personally, I don't remember it, I was exactly 100 days old when that happened. Land a man on the moon. Though ultimately multiple people walked on the surface of the moon, the entire management focus of the Apollo mission was on landing one man on the moon. The mission of D-Day and the invasion of Normandy by the Western Allied forces was different. It was not about learning one boat in Normandy. On June 6th, in 1944, the Americans, British, and the French began sending over 150,000 soldiers to Normandy coastline, including the famous Utah Beach, Omaha Beach, Juno Beach, and Sword Beach. I like this picture here of American airplane production before the invasion. The focus of management was not to build a boat or build a plane, it was building many of them. Process management ultimately only makes sense if you're repeating something. Elon Musk doesn't want to build one rocket to fly to Mars, he intends, and in fact, has even started to build, many Starships. His dream is to establish a colony on Mars. For management problems, you only do something once. You should take a course on project management. If however, you want to do something multiple times, you have to think about process flows. For most of us, I propose, planning a wedding is a project; you plan for one marriage. The wedding planner, in contrast, thinks of wedding as a process. Other examples. The more units flow through the process, the easier will it be to use process analysis as a tool. When in the late 1800s Gottlieb Daimler built the first car, he at first didn't think about bottlenecks, utilization, so inventory. His focus was on managing one project, which was building a beautiful car. When three decades later Henry Ford mass-produced cars, he would make a vehicle roughly every minute. For Ford, it was all about the process. Similarly in health care, big emergency room see between 100-200 patients per day. Even something medically challenging as a bypass surgery is not thought of as a process. In contrast, when Dr. Daniel Williams preferred to perform the first heart surgery, he most likely thought of it as a project. You see that when work gets repeated, when we move from the first units to the nth unit, we need to change our focus on project management to process management, and that is really what this course is all about.
+```
