--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.10 Module Review and Practice Problem.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.10 Module Review and Practice Problem.md
@@ -1,85 +1,73 @@
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
 
+### 课程2.10 模块回顾和实践问题
 
-通过**丰田生产系统（TPS）**的历史演变与核心框架（精益屋），结合汽车行业案例与工具（OEE、%-VAT），揭示精益运营的本质是**消除浪费、提升价值流效率**，核心是掌握如何通过系统性方法优化流程并驱动持续改进。
+以**汽车工业史**为脉络，系统回顾了精益运营的起源与发展，结合**福特流水线模式**与**丰田生产系统（TPS）** 的对比，解析了精益管理的核心框架与实践工具。以下是核心内容提炼与扩展分析：
 
----
+#### 1. 精益运营的演化与核心框架
 
-### **一、汽车工业的历史启示**
-1. **福特的规模化生产模式**  
-   - **核心**：流水线分工、标准化作业（单任务工人）、追求规模经济。  
-   - **成就**：Model T生产时间从12小时缩短至2.5小时，成本大幅降低，推动汽车普及。  
-   - **局限**：僵化的流程、高库存、忽视灵活性。  
+##### 1.1 历史背景与行业对比
 
-2. **丰田的精益革命**  
-   - **背景**：二战后日本资源匮乏，需求分散，无法复制福特模式。  
-   - **创新**：  
-     - **需求驱动**：按需生产（Just-in-Time），减少库存。  
-     - **员工赋能**：工人可拉停生产线（Andon Cord）即时解决问题。  
-     - **持续改进**：Kaizen（改善）文化，全员参与消除浪费。  
-   - **成果**：1980年代MIT研究显示，丰田生产效率（工时/车）仅为通用的45%，缺陷率低70%，库存周转快10倍。
+- **福特模式（大规模生产）**：  
+  - **特点**：通过流水线实现标准化与规模经济，单件工时从12小时压缩至2.5小时，依赖工人高度分工（如60秒/工序）。  
+  - **局限**：僵化的生产节奏导致库存积压（如通用汽车工厂库存周期达2周），无法适应需求波动。  
+- **丰田生产系统（TPS）**：  
+  - **起源**：二战后日本资源匮乏背景下，大野耐一等人提出以「消除浪费（Muda）」为核心的TPS，通过 **JIT（准时制）** 和 **自働化（Jidoka）** 实现灵活生产。  
+  - **成果**：1980年代MIT研究显示，丰田单辆车装配工时仅18小时（通用为40小时），库存周期仅2小时（通用为2周）。  
 
----
+##### 1.2 TPS的「丰田屋」模型  
+- **屋顶目标**：零浪费（Muda）、零缺陷、零停机、零库存、零切换时间。  
+- **两大支柱**：  
+  - **JIT（流动优化）**：拉动生产、单件流、看板管理（Kanban）。  
+  - **自働化（质量内建）**：设备异常自动停机、员工授权停线（Andon系统）。  
+- **三大基础**：柔性生产、标准化作业、全员参与（Kaizen持续改进）。  
 
-### **二、丰田生产系统（TPS）的精益屋框架**
-1. **屋顶目标：零浪费（Muda）**  
-   - **七大浪费**：过量生产、等待、运输、过度加工、库存、动作、缺陷。  
-   - **延伸目标**：零缺陷、零故障、零库存、零切换时间。  
+#### 2. 关键工具与指标实践
 
-2. **两大支柱**  
-   - **流动（Flow）**：  
-     - **节拍时间（Takt Time）**：匹配生产节奏与需求速率。  
-     - **单件流（Single-Piece Flow）**：减少批量，加速周转。  
-     - **看板（Kanban）**：可视化拉动系统，避免过量生产。  
-   - **质量（Quality）**：  
-     - **自働化（Jidoka）**：自动检测缺陷并停机。  
-     - **源头质量**：问题即时解决，避免传递。  
+##### 2.1 OEE（整体设备效率）
 
-3. **地基：可持续运营基础**  
-   - **标准化作业**：定义最优操作流程，减少变异。  
-   - **员工参与**：鼓励一线提出改进建议（如质量圈）。  
-   - **柔性能力**：多技能工人、快速换模（SMED），适应需求变化。  
+- **公式**：  
+  \[
+  \text{OEE} = \text{可用率} \times \text{性能率} \times \text{合格率}
+  \]  
+  - **案例应用**：视频中自行车风洞测试场景，10天窗口期内设备可用率=9天/10天，性能率=实际产量/理论产量，合格率=有效测试时间/总运行时间，最终OEE=31.25%。  
+  - **改进方向**：减少停机（如预防性维护）、优化速度（如设备参数校准）、提升良率（如工艺标准化）。  
 
----
+##### 2.2 %-VAT（增值时间占比）
 
-### **三、关键工具与实践**
-1. **整体设备效率（OEE）**  
-   - **公式**：OEE = 可用率 × 性能率 × 良品率  
-   - **案例**：某设备10天内运行9天，每天有效操作5次（每次100分钟），无效时间2小时 → OEE=31.25%。  
-   - **意义**：量化设备利用损失（停机、速度低下、废品）。  
+- **公式**：  
+  \[
+  \text{流动时间效率} = \frac{\text{增值时间}}{\text{总流程时间}} \times 100\%
+  \]  
+  - **案例应用**：护照更新流程总耗时23天，实际增值操作仅12分钟（如审核与打印），效率≈0.08%。  
+  - **优化策略**：数字化审批（压缩等待时间）、并行流程设计（如预审与材料提交同步）。  
 
-2. **增值时间比率（%-VAT）**  
-   - **公式**：%-VAT = 增值时间 / 总流程时间 × 100%  
-   - **案例**：护照更新流程总耗时23天，仅12分钟为有效操作 → %-VAT≈0.09%。  
-   - **启示**：暴露非增值环节（如等待、审批），推动流程精简。  
+#### 3. 行业应用与跨领域启示
 
----
+| **领域**       | **TPS应用案例**                                | **关键改进效果**                          |  
+|----------------|-----------------------------------------------|-----------------------------------------|  
+| **汽车制造**    | 混合模式生产（Heijunka）平衡轿车与旅行车产能      | 库存降低50%，设备利用率提升30%    |  
+| **医疗服务**    | 患者流优化（减少非诊疗环节）                     | 患者等待时间缩短60%，MRI设备OEE提升至85% |  
+| **航空业**      | 飞机滑行时间监控与动态调度                       | 日均滑行时间从1.5小时压缩至0.8小时   |  
 
-### **四、行业应用与关键结论**
-1. **制造业**：  
-   - **降低库存**：通过JIT减少仓储成本，如丰田2小时零件库存 vs 通用2周。  
-   - **快速换型**：SMED技术缩短生产线切换时间，支持小批量定制。  
+#### 4. 关键结论与行动指南
 
-2. **服务业**：  
-   - **医疗流程**：通过%-VAT识别患者等待时间，优化检查与诊疗衔接。  
-   - **餐饮连锁**：应用节拍时间匹配高峰需求，动态调配人力（如Subway案例）。  
-
-3. **核心结论**：  
-   - **精益非成本削减**：而是通过消除浪费释放资源，提升客户价值。  
-   - **员工是核心资产**：赋能一线参与改进，激发持续创新（如丰田年人均建议数≈10条）。  
-   - **柔性对抗不确定性**：多技能培训、模块化设计应对市场波动。  
+1. **双维度优化**：  
+   - **资源视角（OEE）**：优先提升可用率（如预测性维护）与性能率（如设备参数优化）。  
+   - **客户视角（%-VAT）**：通过服务蓝图（Service Blueprint）重构流程，将高成本「前台」环节转移至「后台」（如医院保险核验线上化）。  
+2. **文化变革**：  
+   - **全员参与**：推行Kaizen改善提案制度，激励一线员工发现浪费（如丰田产线工人年均提案数≥10条）。  
+   - **管理者角色**：从「监工」转为「赋能者」，通过五问法（5 Whys）引导根本原因分析。  
+3. **技术融合**：  
+   - **IoT与预测分析**：实时监控设备状态（如飞机引擎传感器），动态调整维护计划。  
+   - **数字孪生**：利用MR技术模拟生产线平衡，缩短换模时间（如丰田工厂换模时间＜10分钟）。  
 
 ---
-
-### **五、行动建议**
-- **绘制价值流图（VSM）**：识别端到端流程中的非增值步骤（如文档审批、物料搬运）。  
-- **启动改善周（Kaizen Event）**：聚焦瓶颈环节，跨部门协作快速实验解决方案。  
-- **数字化监控**：部署IoT传感器实时追踪OEE，自动触发维护预警。  
-- **建立拉动系统**：在供应链中推广看板，减少过量生产与库存积压。  
-
---- 
 
 ### **总结**  
-精益运营的本质是**以客户价值为导向，通过全员参与的持续改进，构建灵活、高效、无浪费的流程体系**。丰田生产系统不仅重塑了汽车行业，更为制造业与服务业的转型提供了普适框架。核心在于：**将“消除浪费”内化为组织文化，用数据驱动决策，让每一秒、每一动作为客户创造价值**。
+精益运营的本质是通过**持续暴露问题**驱动改进，而非追求短期效率。正如TPS的「丰田屋」模型所示，其成功不仅依赖工具（如OEE、Kanban），更根植于「现地现物（现场主义）」的文化基因。企业需以**客户价值**与**资源效能**为双引擎，在数字化时代重构流程，实现从「局部优化」到「系统精益」的跃迁。
+
+---
 
 ### 附录：字幕
 
