--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.8 Wasting Flow Time.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.8 Wasting Flow Time.md
@@ -1,67 +1,76 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第二章: Lean Operations  
-##### 视频小节4: Wasting Flow Time  
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
+
+### 课程2.8 流程时间浪费
+
+聚焦于**流程时间浪费**的识别与优化，结合制造业与服务业的案例分析，提出了从**客户视角**衡量流程效率的工具与方法。
+
+#### 1. 流程时间浪费的本质与衡量工具
+
+##### 1.1 流动时间效率（Flow Time Efficiency）
+
+- **定义**：增值时间占流程总时间的比例，计算公式为：  
+  \[
+  \text{流动时间效率} = \frac{\text{增值时间}}{\text{流程总时间}} \times 100\%
+  \]  
+  - **案例**：医疗检查流程中，患者总耗时2小时（流程总时间），但实际医疗操作仅20分钟（增值时间），效率仅为16.7%。  
+- **改进方向**：通过压缩非增值时间（如等待、重复登记）提升效率。  
+
+##### 1.2 服务蓝图（Service Blueprint）
+
+- **核心功能**：可视化客户旅程，区分「前台」（客户直接接触）与「后台」（内部支持）活动，识别流程瓶颈。  
+  - **垂直维度**：区分服务交付场景（如客户家中、医院现场）。  
+  - **水平维度**：按时间顺序分解服务步骤（如预约→检查→诊断）。  
+- **应用案例**：  
+  - **医疗场景**：将保险核验、问卷填写等步骤从医院现场（高成本）转移至客户家中（低成本），减少患者等待时间。  
+  - **电商场景**：亚马逊通过存储用户信息自动化结算流程，消除重复输入账单信息的客户摩擦。  
+
+#### 2. 客户视角的浪费类型
+
+##### 2.1 客户等待的隐性成本
+
+- **库存化浪费**：等待的客户本质上是「库存」，占用物理空间并产生机会成本（如医院候诊室需支付租金但未产生收入）。  
+- **体验损失**：客户宁愿在家等待10小时处理线上事务（低压力），也不愿在候诊室等待1小时（高焦虑）。  
+
+##### 2.2 自动化与流程重构
+
+- **自动化降本**：通过技术减少客户主动操作（如医院自动调取历史病历替代重复填写问卷）。  
+- **流程分流**：将高成本「现场服务」转化为低成本「远程服务」（如航空值机从柜台转移到手机App）。  
+
+#### 3. 制造业与服务业浪费的共性
+
+##### 3.1 七大浪费的跨领域映射
+
+- **库存浪费**：积压的待检患者（服务业）与未加工零件（制造业）均占用资源且增加管理成本。  
+- **运输浪费**：患者频繁转科（医院）与零件多次搬运（工厂）均导致时间损耗。  
+
+##### 3.2 改进策略对比
+
+| **领域**       | **制造业策略**              | **服务业策略**                |  
+|----------------|---------------------------|-----------------------------|  
+| **等待浪费**   | 减少设备停机（OEE优化）  | 预约制分流患者（服务蓝图）  |  
+| **过度加工**   | 简化冗余工序           | 避免重复填写表格（自动化）  |  
+
+#### 4. 关键工具与行动指南
+
+1. **流动时间效率诊断**：  
+   - 使用%-VAT（增值时间占比）量化流程效率，优先优化增值占比低于30%的环节。  
+2. **服务蓝图绘制步骤**：  
+   - **步骤1**：分解客户旅程（如就诊流程：预约→候诊→检查→复诊）；  
+   - **步骤2**：标注高成本「前台」环节（如医院现场核验），将其转移至「后台」或远程完成。  
+3. **技术赋能**：  
+   - 引入IoT实时监控设备状态（减少制造业停机），同时开发客户自助服务系统（降低服务业人力成本）。  
 
 ---
 
-### 核心概念与工具  
-1. **流程时间效率（%-VAT，Value-Added Time）**  
-   • **定义**：流程单元（如客户、产品）在流程中实际增值时间占总流程时间的比例。  
-   • **公式**：  
-     \[
-     \text{流程时间效率} = \frac{\text{增值时间}}{\text{总流程时间}} \times 100\%
-     \]  
-   • **应用场景**：  
-     ◦ **医疗案例**：MRI检查仅20分钟（增值时间），但患者总耗时2小时（流程时间）→ 效率≈16.7%；  
-     ◦ **制造业案例**：三阶段生产流程中，仅小部分时间用于加工，其余为等待和运输。  
+##### 结论  
 
-2. **服务蓝图（Service Blueprint）**  
-   • **定义**：将客户服务活动按**时间轴**（左→右）和**地点维度**（客户家中、前台、后台）分类的工具。  
-   • **目标**：  
-     ◦ **减少客户摩擦**：将工作从“前台”（如医院、零售店）转移至“后台”或客户家中；  
-     ◦ **降低成本**：减少前台资源占用（如场地、人力）。  
-   • **案例**：  
-     ◦ **医疗优化**：提前在线验证保险信息，避免患者到院填写表格；  
-     ◦ **电商优化**：亚马逊存储用户信息，简化重复购买流程。  
-
-3. **自动化与无缝体验**  
-   • **策略**：通过技术减少客户手动操作（如自动填充表单、智能预约系统）；  
-   • **价值**：降低客户努力，提升体验（如患者偏好在家等待医生邮件，而非现场排队）。  
+精益运营需兼顾**资源效率**（OEE）与**流程效率**（流动时间效率）。通过服务蓝图重构客户旅程、自动化减少客户摩擦、以及跨领域借鉴七大浪费改善策略，企业可实现「双效提升」——既降低内部成本，又增强客户体验。正如视频所述：「流程单元（无论是零件还是客户）的耐心有限，优化其流动时间是企业竞争力的核心」。
 
 ---
 
-### 行业应用与案例分析  
-4. **制造业 vs. 服务业的时间浪费**  
-   • **制造业**：产品在流程中等待（如铸造→加工→组装）→ 库存积压、资金占用；  
-   • **服务业**：客户等待（如医院候诊）→ 体验下降、空间成本增加。  
+### 附录：字幕
 
-5. **客户体验的隐形成本**  
-   • **客户视角**：1小时现场等待的负面体验 > 10小时在家等待的异步服务；  
-   • **企业视角**：前台服务（如医院候诊室）需承担高额场地与人力成本。  
-
----
-
-### 关键结论与行动建议  
-1. **从资源效率到流程效率的视角转换**：  
-   • **OEE（资源效率）**：关注设备/人力利用率，但可能牺牲客户体验（如过度填充候诊室）；  
-   • **%-VAT（流程效率）**：以客户/产品为中心，压缩非增值时间（等待、运输）。  
-
-2. **优化方向**：  
-   • **前台转移**：将工作移至后台或客户端（如在线预审、自动化表单）；  
-   • **流程同步**：减少批次处理，实现“单件流”（如医疗检查与清洁流程协同）。  
-
-3. **技术驱动体验升级**：  
-   • **数据存储与复用**：减少重复输入（如医疗记录共享、电商用户信息记忆）；  
-   • **智能调度**：通过算法优化资源分配（如动态调整医生问诊与设备使用）。  
-
-4. **平衡资源与客户价值**：  
-   • **短期**：利用服务蓝图识别客户痛点，优先解决高摩擦环节；  
-   • **长期**：通过自动化与流程再造，实现资源效率与客户体验的双赢。  
-
-**最终目标**：通过**流程时间效率量化**与**服务蓝图设计**，将“客户时间浪费”转化为可改进的指标，构建**高响应（低等待）、低成本（少库存）、高体验（无缝交互）**的精益服务体系。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -86,3 +95,4 @@ Learning Objectives:
 字幕文本: 
 
 Unfortunately, many experts and consultants focus entirely on the OEE metric we discussed in the last session. To them, lean operations is all about making the resources more productive, and how do you make a resource like a doctor more productive? Well, since idle time is one of the seven sources of waste, having a waiting room packed with enough patients to keep our dog busy for an entire day seems like a good idea. We talk about customer waiting times in another module of this course, for now, let me just point out this is not lean at all. Remember that inventory is also a form of waste and wasting customers are inventory. As I mentioned in the context of my radiology experience at the beginning of the module, lean is equally about the customer. Customers waiting and customers running around are also forms of waste, and so, in this session, we introduced some tools and measures to capture this. We're now changing the perspective from the resource to the perspective of the flow unit. When owner looked at manufacturing flows, he said he postulated products have to flow like water, products have to flow like water, well, why wouldn't they? What keeps products from smoothly flowing through the production process? Take a look at the three step production process here, parts here are taken out of inventory, then they are produced in a casting operation. Once all the parts are done with casting, a transporter moves them over to the machining operations, there they waited again until the machine has completed the previous production cycle. Again, a worker then comes and moves the output over to the assembly station, of course, the other parts are not ready yet in the batch, and so they have to wait. And so the assembly only starts when all the parts are there, and so our part spends even more time waiting, finally, the parts, once they are assembled, get shipped. Now we can define the flow time efficiency, also known as a percentage value add time, as a ratio between the value add time and the flow time. So in the three step process, you notice that only a small fraction of the flow time is really adding value, most of the flow time, the flow unit sits around waiting to be moved forward in its journey. In my radiology example, at the beginning of the module, the ratio was 20 minutes of care spread out over more than 2 hours of flow time. But here's another observation about customer experience. Personally, I would argue that it's not just about the time investment of the customer, but it's also about customer friction, customer effort and pain points. Personally, I'd much rather spend 10 hours at home waiting for an email that takes my doctor 5 minutes to write, rather than spending 1 hour in the waiting room for a 10 minute discussion. Now you see that the flowtime efficiency is superior in the second scenario, but I prefer the first. This is the observation behind a tool that is known as a Service Blueprint. What the Service Blueprint does, it takes all the activities related to one or multiple customer episodes and then the Service Blueprint reorganizes them along two dimensions. From the left to the right, we have time, we start with the early activities on the left and work our way to the later activities on the right. Just like with the previous production timeline. But unlike the production timeline I showed with the casting operation, we now also have a vertical dimension. The vertical dimension distinguishes where the customer service is delivered, on top, we have activities that happen at the home of the customer. Really, from a customer perspective, this type of work is preferable. From my customers perspective, it's generally preferable to deal with work from home compared to work that happened on what's called on stage. On stage stands for work that happens at the retail branch, in the hospital or inside the factory. But also from the firm's perspective, carrying out work on stage tends to be expensive, you usually incur real estate cost, and the firm also has to have the resources ready exactly when the customer walks in. So wherever we can, it's nice to move work away from the stage, we want to move work off stage, it's just like checking into your flight from home as opposed to doing this at the gate. Just think about my radiology example one more time, verifying my insurance status, this is work that could have been done before I showed up in the hospital. More convenient for me and cheaper for the hospital. Beyond having the work happen at home, we can also think about another way of moving it off stage. Imagine we as a firm could do the work for the customer, I mean, you think about buying stuff on Amazon, you wouldn't enter any billing or shipping information anymore. When you buy something on Amazon, you know that Amazon has stored everything and remembers it over time, so that reduces your work the next time you're going to buy something. Why can't my hospital do this? Why do I have to fill out a four page survey in the waiting room every time I see my doctor, only then to be asked exactly the same questions on the survey when I'm talking to the doctor in the room? To be fair, this has gotten a lot better over the last years, but you get my point. So another way of improving the customer experience is through automation, we move effort away from the customer by automating some of the activities. In my latest book, Connected Strategy, that I wrote with my colleague Nicolaj Siggelkow, we discuss how modern technology can create seamless. And magical user experiences that do not always require the customer to take action. Flow units are impatient and so we should get them through our process as fast as we can. That is true for a crankshaft in an order plant that should not sit in inventory for a week but rather should be turned over many times during the week. Or even multiple times during the day in order to reduce the inventory cost. But it's also true for service organization where the inventory consists of waiting customers and clearly customers want to move as a whole post will be sitting around and waiting. In either setting we can compute the percentage of flow time that is used for value adding activities as a good diagnostic tool to see where flow time is wasted in the process. That's it for today, I see you soon.
+```
