--- a/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.7 The Seven Sources of Waste.md
+++ b/05. Introduction to Operations Management/Module 2 Flow Management and Lean Operations/2.7 The Seven Sources of Waste.md
@@ -1,72 +1,69 @@
-### 模块标题: Week 2: Flow Management and Lean Operations  
-#### 第二章: Lean Operations  
-##### 视频小节3: The Seven Sources of Waste  
+## Coursera 商业基础课程《运营管理导论》 - 模块2 - 流程管理和精益运营
+
+### 课程2.7 七大浪费
+
+系统解析了精益运营中的**七大浪费**及其识别方法，结合制造业与医疗行业案例，揭示了浪费的本质与改进策略，并引入 **OEE（整体设备效率）** 作为量化工具。
+
+#### 1. 七大浪费的定义与分类
+
+根据丰田生产系统（TPS）和大野耐一的框架，浪费分为以下类型：  
+1. **动作浪费（Motion Waste）**：员工不必要的移动（如工具摆放不合理导致频繁转身取物）；  
+2. **缺陷浪费（Defects Waste）**：返工或报废品（如医疗中的重复检查或误诊）；  
+3. **过度加工（Overprocessing Waste）**：超出客户需求的工艺（如给仅需普通包装的产品使用高端包装）；  
+4. **等待浪费（Waiting Waste）**：资源闲置（如ICU病床因清洁流程低效导致空置）；  
+5. **库存浪费（Inventory Waste）**：过量原材料或半成品积压（如生产线前堆积的未加工部件）；  
+6. **过量生产（Overproduction Waste）**：提前或超需求生产（如医院过度安排非必要检查）；  
+7. **运输浪费（Transportation Waste）**：不必要的物料搬运（如工厂内多次中转零件）。
+  
+**第八种浪费**：**智力浪费**（未充分利用员工创意与经验）。
+
+#### 2. 识别浪费的工具与方法
+
+- **OEE（整体设备效率）**：通过三个维度量化资源浪费：  
+  - **可用率**（停机时间损失）：如医疗设备因维护计划不合理导致20%时间闲置；  
+  - **性能率**（速度损失）：如生产线因设备老化导致产能仅达理论值的80%；  
+  - **合格率**（质量损失）：如制造业因工艺缺陷导致5%产品返工。  
+- **TIM WOOD记忆法**：将七大浪费首字母组合为「Transport, Inventory, Motion, Waiting, Overprocessing, Overproduction, Defects」，便于快速记忆。  
+- **数字化监控**：利用AI和机器视觉技术实时追踪流程（如视频分析生产线动作效率）。
+
+#### 3. 行业应用与案例分析
+
+- **医疗行业**：  
+  - **缺陷浪费**：患者重复检查（如因信息未共享导致同一化验多次进行）；  
+  - **运输浪费**：患者频繁转科（如急诊科与影像科距离过远增加转运时间）；  
+  - **OEE优化**：通过实时数据监控ICU病床利用率，将空置率从18%降至5%。  
+- **制造业**：  
+  - **动作浪费**：工人因工具摆放混乱导致单件生产时间增加30%；  
+  - **过量生产**：因需求预测偏差导致库存积压，占用50%仓储空间。
+
+#### 4. 消除浪费的策略
+
+- **流程优化**：  
+  - **价值流映射（VSM）**：绘制端到端流程，识别非增值环节（如减少医院患者登记与检查间的等待环节）；  
+-  **单件流（One-Piece Flow）**：小批量生产减少库存（如将汽车零部件批量从1000件降至50件）。  
+- **技术赋能**：  
+  - **IoT与预测性维护**：通过传感器预警设备故障，减少停机时间（如航空发动机维护周期优化）；  
+  - **AI驱动的视觉检测**：实时监控生产线动作标准化程度（如识别工人多余动作并反馈改进）。  
+- **文化变革**：  
+  - **全员参与（Kaizen）**：鼓励员工提案改善（如护士建议优化药品配送路径）；  
+  - **精益培训**：通过模拟案例培养员工浪费敏感度（如使用沙盘演练库存管理）。
 
 ---
 
-### 核心概念与理论框架  
-1. **七种浪费来源（TIM WOOD框架）**  
-   • **Transportation（运输）**：流程单元（如患者、物料）在流程中的无效移动（如医院患者多次转运）。  
-   • **Inventory（库存）**：过量库存占用空间与资金（如ICU病床前的等待患者队列）。  
-   • **Motion（多余动作）**：员工执行非增值动作（如医生寻找工具、新手更换自行车轮胎的低效操作）。  
-   • **Waiting（等待）**：资源或流程单元的空闲时间（如MRI设备闲置、飞机滑行）。  
-   • **Over-processing（过度加工）**：超出客户需求的加工（如医疗中的不必要的重复检查）。  
-   • **Over-production（过度生产）**：生产超出实际需求（如医院提前安排过多床位）。  
-   • **Defects（缺陷）**：返工或质量问题（如医疗中的重复入院、生产线次品）。  
-   • **第8种浪费（未被利用的员工智慧）**：未激发员工改进建议（如护士未参与流程优化）。  
+#### 关键结论与行动指南
 
-2. **记忆工具：TIM WOOD**  
-   • 首字母缩写助记：Transport, Inventory, Motion, Waiting, Over-processing, Over-production, Defects。  
+1. **数据驱动决策**：OEE的三大维度（可用率、性能率、合格率）需结合实时数据分析（如医疗设备每日利用率报表）；  
+2. **跨行业普适性**：七大浪费框架可迁移至服务业（如物流中的运输浪费）和知识工作（如软件开发中的过度设计）；  
+3. **技术伦理平衡**：数字化监控需兼顾效率与隐私（如匿名化处理生产线视频数据）；  
+4. **持续改进机制**：建立PDCA循环（如每月复盘OEE指标，制定下一阶段优化目标）。
+
+通过上述方法，企业可系统性减少浪费，提升资源利用率，实现精益运营的终极目标——**以最小投入创造最大客户价值**。
 
 ---
 
-### 浪费识别的技术与方法  
-3. **传统观察方法**  
-   • **时间与动作研究**：通过人工记录或视频分析员工动作（如医生问诊流程拆解）。  
-   • **案例**：医疗团队发现医生仅20%时间用于直接诊断，其余为文书和等待。  
+### 附录：字幕
 
-4. **现代技术应用**  
-   • **数字化追踪**：利用系统日志分析处理时间（如呼叫中心工单处理时间戳）。  
-   • **AI视觉分析**：通过摄像头与机器学习实时监测生产线浪费（如轮椅装配线工人动作优化）。  
-   • **案例**：AI软件分析生产线视频，识别工人闲置或重复动作，生成效率报告。  
-
----
-
-### 行业应用与案例分析  
-5. **医疗行业浪费示例**  
-   • **运输浪费**：患者多次转运（如放射科→病房→检查室）；  
-   • **库存浪费**：ICU床位空置但被预占；  
-   • **过度加工**：不必要的重复影像检查；  
-   • **缺陷浪费**：因误诊导致的重复治疗（返工）。  
-
-6. **制造业与服务业对比**  
-   • **制造业**：生产线库存积压（Over-production）、设备闲置（Waiting）；  
-   • **航空业**：飞机滑行时间（Transport）、登机流程低效（Motion）。  
-
----
-
-### 关键结论与行动建议  
-1. **浪费的普遍性与隐蔽性**  
-   • 浪费不仅存在于制造业，服务业（如医疗、航空）的浪费更复杂且成本更高。  
-   • **洞察**：80%的流程时间可能由非增值活动构成（如患者等待、飞机维护）。  
-
-2. **技术驱动的浪费量化**  
-   • **数字追踪**：利用系统日志自动化测量处理时间（如OEE计算）；  
-   • **AI视觉**：实时识别动作浪费（如生产线工人多余动作），推动即时改进。  
-
-3. **改进策略**  
-   • **标准化流程**：减少运输与动作浪费（如医院优化患者转运路径）；  
-   • **按需生产**：通过节拍时间（Takt Time）同步需求与产能，避免过度生产；  
-   • **员工赋能**：建立反馈机制，利用一线员工智慧减少未被利用的智力浪费。  
-
-4. **文化变革**  
-   • **精益思维渗透**：从高层到一线统一浪费识别语言（如TIM WOOD框架）；  
-   • **客户价值导向**：以客户支付意愿为标尺，剔除过度加工与非增值步骤。  
-
-**最终目标**：通过**系统化框架（TIM WOOD）**与**技术工具（AI、OEE）**，将“隐形浪费”转化为可量化、可改进的指标，实现**资源效率最大化**与**客户体验最优化**。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 2: Flow Management and Lean Operations
@@ -91,3 +88,4 @@ Learning Objectives:
 字幕文本: 
 
 The OE framework has helped us to look at a resource and separate waste from value add time. In this session, let's talk a bit more about what waste looks like. According to Eltaciono, there exists seven sources of waste. Already introduced the key idea in the last session moving is not working. So as we look for waste, it is not just the or resource that provides the opportunity, busyness per se is not a virtue. A piece of equipment might be highly utilized, or an employee might always be overworked, but that is no guarantee that the process of the employee is adding value. Let's start by going back to the Taylor quote. Remember we talked about awkward, inefficient or ill directed movements of man? Well, your awkward, inefficient and ill directed operations professor will now define seven sources of waste. The first waste I want to define is wasted motion. It's unnecessary movement of people during their work. I just changed the tire of my bike this morning. It took me probably twice as long as it takes the skilled bike mechanic down the street from here. And so that is a form of wasted motion. The same is really true for a chef. I love watching chefs in the kitchen. Every motion adds value. There's no fumbling, there's no pausing. It's just perfection. That's just not me. The second waste relates to defects. Defects are obviously not adding value. They're really annoying for the customer if they remain undetected. And if you detect the defect within the boundaries of your process, they require you fixing them, something that is known as rework. So defects are a second source of waste. Over-processing is a third source of waste, which relates to producing a higher quality than what is needed or demanded by the customer. It's like serving a fancy meal to your relative who only eats cheeseburgers. Or maybe with my German family only loves Bardos. So now we are up to three motion, overprocessing and defects. All of those three can be found by looking at one resource in isolation. To see the other four sources of waste, we really have to move beyond one worker performing one task and look at the process and many workers in a line. Just think back to the subway case. The three persons making a sandwich every 46 seconds. As you switch to looking at the process now, we typically encounter idle time. Some resources by definition, have more capacity than the bottleneck, and so they will incur idle time. Now, owner referred to idle time as waiting, as the workers really waiting for the flow unit the part. Personally, I like idle time better because I don't want to confuse it with customers waiting for a resource. But again, owner calls it waiting and who am I to criticize the guard of operations? Next, there's inventory. If the flow is not well coordinated, some of the resources will produce faster than the others. In particular, it's going to be the bottleneck was going to be the slowest step, and we're going to end up with inventory in the process and typically in front of the bottleneck. That is our fifth source of waste. Inventory also happens when we produce more than what is demanded by the customer. We go back to our discussion of TAC time and its role of keeping us in sync with demand. Ono named this overproduction and he made it the 6th source of waste. And finally, as we have multiple resources in the process, we have to move the flow unit from one resource to the other, which is known as transportation. So here they are, seven sources of waste. Again, more to come in future videos, but I wanted to introduce a framework. First, let me make two observations. First, how do you remember these seven sources of waste? There are really multiple memory tricks out there, but the one I like the best is Tim Wood. Tim Wood simply combines transport, inventory, motion, waiting, overprocessing, overproduction and defects. I know it's somewhat stupid, but at least for me, it has always worked. And then second, the operations community now increasingly refers to an 8th source of waste, and that's a waste of intellect, which means not using the ideas of those working in the process. That is a wasted opportunity and thus an 8th source of waste. We talk more about involving the workers in future discussions on quality, at this point, think back to the comment I made on Tailorism at the beginning of this module. In the 20 years that I've been doing consulting work and research collaborations with companies, I've always been amazed how universally applicable the seven sources of waste end up being. Yes, waste really might look different in each industry. Yes, this framework has its root in manufacturing, but also works well in other settings, including healthcare. I show you some examples here on this slide. I find it almost shocking how directly the seven sources of waste apply to healthcare and similar settings. Rework in healthcare is called readmissions. Hospitals have a whole department called Patient Transports. Rooms, equipment and providers are at times idle, as we discussed at the beginning of the module. And don't get me started on overproduction the provision of unnecessary procedures by the providers. Anyway, I'm sure you have seen these things in one form or the other in your own experience. Now, spotting waste really requires careful observation. In the past, this has mostly been done by stopwatching people. For example, I've done some work myself using a method called time and motion studies. What I did is I video recorded primary care providers and then I would dissect the encounters that they had with their patients. Second by second, with the help of some medical experts and other doctors to look for ways, this would give us a sense on how doctors are spending their time with patients. It was fascinating to me to see how little time was spent on actual examinations. Such data collection is obviously very tedious. However, when you show up with either a video camera or a stopwatch to collect data, chances are that you're not really getting representative data from the operations. Let me make two observations on how such time and motion studies are changing as we're moving along in history. First, most service operations these days are really digitized, and so oftentimes you can get timestamp data from the operations, particularly, call centers, claim processing, customer support, or reading X rays. And all these processes are something that I refer to as digital exhaust. Such processes store when an employee touches a record and how long they work on it. That allows you to compute the processing times even years after the work has happened. Taylor's claim of movement leaving nothing tangible behind is simply no longer true in our modern digital world. Second, we now really have technology to use image processing and AI to do this observation for us. To help illustrate, I've been working with a startup run by two Pen grads. And these guys have developed machine vision technology that helps manufacturing firms to measure processing times, spot waste, and detect quality problems via video cameras that are installed at the assembly line. What you see here is the assembly line of Pride Mobility. Pride is making high end wheelchair a business also run by a Wharton grad. And the video footage here on this slide shows you line segment 170, which consists out of some manual assembly operation. And you notice that the image recognition of the software is tracking the flow unit, which is the wheelchair, and it's also tracking the resource, which is the gentleman here in the white T shirt. And then the software is smart enough to spot when the worker is idle or the worker is spending more time on the flow unit as usual. All this data is then fed into a reporting system that spits out report that look like this. Now, I'm sure you've seen this in your own life. This is really more and more 1984, George Orwell than is emerging in our society. But it doesn't matter if you drive a modern car, surf the Internet, or go for a walk with your phone. Everything that we now do can be tracked and leaves a data trail behind. This is certainly worthy a longer discussion about privacy and individual freedoms. If you're interested in this topic, I make sure to provide a link to some work I've been doing in this space. I do, however, think that these various tracking technologies will and should play an increasing role in operations management. In the previous video, we defined the OEE as a percentage of time that the resource is doing what it is designed to do. Until now, waste was an abstract enemy that was somehow reducing our OEE. The Seven Sources of Waste Framework helps us to see how exactly we waste capacity tim Wood, in other words, is the main enemy to a lean operations. In the next video, I want to switch the perspective and talk about the view of the flow unit, be it a customer in a service process or Widget in a production process. See you then.
+```
