--- a/05. Introduction to Operations Management/Module 3 Little's Law/3.1 Little's Law.md
+++ b/05. Introduction to Operations Management/Module 3 Little's Law/3.1 Little's Law.md
@@ -2,32 +2,34 @@
 
 ### 课程3.1 利特尔法则
 
-聚焦于**利特尔法则（Little's Law）**，通过医院患者流案例解析流程效率的核心关系，核心是掌握库存（Inventory）、流量率（Flow Rate）与流程时间（Flow Time）的数学关联，并应用其优化运营决策。
+通过 **利特尔法则（Little's Law）** 解析流程效率的数学本质，结合医院患者流案例，核心是掌握库存（I）、流量率（R）与流程时间（T）的动态关系，并应用其优化运营决策。
 
 #### 1. 利特尔法则的定义与公式
 
 ##### 1.1 公式表达
 
-**I = R × T**  
-- **I（Inventory）**：流程中的平均库存（如医院患者数量）。  
-- **R（Flow Rate）**：单位时间流量率（如每日处理患者数）。  
-- **T（Flow Time）**：流单元平均流程时间（如患者从进入至离开的总时间）。  
+- **I = R × T**  
+  - **I（Inventory）**：流程中的平均库存（如医院患者数量）。  
+  - **R（Flow Rate）**：单位时间流量率（如每日处理的患者数）。  
+  - **T（Flow Time）**：流单元平均流程时间（如患者从进入至离开的总耗时）。  
 
 ##### 1.2 核心逻辑
 
 - 三者动态关联，任意两项确定后，第三项由公式自然推导。  
-- **降低库存的唯一途径**：缩短流程时间或减少流量率（后者通常不可取）。  
+- **降低库存的唯一途径**：缩短流程时间或减少流量率（后者通常不可取，因会牺牲产出）。  
 
-#### 2. 医院案例解析
+#### 2. 医院案例解析与数据观测
 
-- **数据观测方法**:  
-  - **累积流入曲线（蓝线）** 与**累积流出曲线（红线）** 记录患者进出时间。  
-  - **库存计算**：任意时刻库存 = 累积流入数 - 累积流出数（如上午10点：4人进入 - 1人离开 = 3人在系统中）。  
+##### 2.1 数据记录方法
 
-- **关键指标计算**：  
-  - **流量率（R）**：全天处理11名患者（若时长为8小时，则R=11/8≈1.375患者/小时）。  
-  - **流程时间（T）**：患者停留时间差异显著（最短15分钟，最长数小时），需计算平均值。  
-  - **库存（I）**：日内波动（0到4人），取平均库存值。  
+- **累积流入曲线（蓝线）** 与 **累积流出曲线（红线）** 记录患者进出时间。  
+- **库存计算**：任意时刻库存 = 累积流入数 - 累积流出数（如上午10点：4人进入 - 1人离开 = 3人在系统中）。  
+
+##### 2.2 关键指标计算
+
+- **流量率（R）**：全天处理11名患者（若时长为8小时，则R=11/8≈1.375患者/小时）。  
+- **流程时间（T）**：患者停留时间差异显著（最短15分钟，最长数小时），需计算平均值。  
+- **库存（I）**：日内波动（0到4人），取平均库存值。  
 
 #### 3. 利特尔法则的应用与启示
 
@@ -37,26 +39,31 @@
   - 若工厂日产量（R=100件）且平均库存（I=200件），则平均流程时间T=2天。  
   - 若医院希望将候诊患者（I）从10人降至5人，需缩短平均就诊时间（T）或减少接诊量（R）。  
 
-##### 3.2 业应用场景  
-  - **制造业**：通过减少生产周期（T）降低在制品库存（I）。  
-  - **零售业**：提高库存周转率（R/I）以降低仓储成本。  
-  - **服务业**：缩短客户等待时间（T）提升满意度（如银行排队优化）。  
+##### 3.2 行业应用场景  
 
-##### 3.3 实际挑战
+- **制造业**：通过减少生产周期（T）降低在制品库存（I）。  
+- **零售业**：提高库存周转率（R/I）以降低仓储成本。  
+- **服务业**：缩短客户等待时间（T）提升满意度（如银行排队优化）。  
+
+##### 3.3 实际挑战与应对
 
 - **流量率（R）** 易统计（如销售额、接诊量），**库存（I）** 在实物流程中较易追踪（如仓库管理系统）。  
-- **流程时间（T）**常被忽视，需通过数据系统（如RFID追踪、数字排队系统）精确测量。  
+- **流程时间（T）** 常被忽视，需通过数据系统（如RFID追踪、数字排队系统）精确测量。  
+- **本杰明·富兰克林的警示**：「失去的时间永不再来」，凸显流程时间管理的重要性。  
 
 #### 4. 关键结论
 
-1. **定律普适性**：  
-   Little's Law适用于任何稳定系统（流入≈流出），无论制造业、服务业或供应链。  
+##### 4.1 定律普适性  
 
-2. **杠杆效应**：  
-   缩短流程时间是优化库存与效率的核心，而非简单限制流量。  
+- Little's Law适用于任何稳定系统（流入≈流出），无论制造业、服务业或供应链。  
 
-3. **数据驱动决策**：  
-   企业需建立实时监控体系，追踪I、R、T，利用公式动态调整运营策略。  
+##### 4.2 杠杆效应
+
+- 缩短流程时间是优化库存与效率的核心，而非简单限制流量。  
+
+##### 4.3 数据驱动决策  
+
+- 企业需建立实时监控体系，追踪I、R、T，利用公式动态调整运营策略。  
 
 #### 5. 行动建议
 
@@ -67,7 +74,7 @@
 --- 
 
 #### 总结
-
+  
 利特尔法则揭示了运营效率的底层逻辑：**时间即成本，速度即竞争力**。通过量化库存、流量与时间的关系，企业可跳出局部优化陷阱，系统性提升流程效率。医院案例表明，即使复杂如医疗流程，亦可通过数据建模实现精准管理。核心在于：**以时间为锚，以数据为舵，持续驱动改进**。
 
 ---
